# homeassistant2xlsx

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst
docs/static/: cli.txt
homeassistant2xlsx/: __init__.py  __main__.py
tests/: __init__.py  test_convert.py  test_latest.py  test_main.py  util.py
tests/data/: input.xlsx  latest.xlsx  notimestamp.xlsx
